refactor: 문제 예시 개선